--- a/server/templates/index.ejs
+++ b/server/templates/index.ejs
@@ -2,10 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="format-detection" content="telephone=no" />
-		<meta name="msapplication-tap-highlight" content="no" />
-		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="/main.css" />
 		<title>Current Step</title>
 	</head>
 	<body>
