--- a/app/css/step.css
+++ b/app/css/step.css
@@ -26,10 +26,16 @@
 	font-size: 120%;
 }
 
-.step .button.button-previous {
+.step .button-previous {
 	top: 0;
 }
 
 .step .button-next {
 	bottom: 0;
+}
+
+.step .button-disabled {
+	background: rgba(255,255,255,0.3);
+	cursor: default;
+	opacity: 0.8;
 }
