--- a/server/templates/index.ejs
+++ b/server/templates/index.ejs
@@ -6,10 +6,13 @@
 		<title>Current Step</title>
 	</head>
 	<body>
-		<h1>Current Step: <%= step %></h1>
-		<form method="post" action="/step/1"><button type="submit">Step 1</button></form>
-		<form method="post" action="/step/2"><button type="submit">Step 2</button></form>
-		<form method="post" action="/step/3"><button type="submit">Step 3</button></form>
-		<form method="post" action="/step/4"><button type="submit">Step 4</button></form>
+		<h1>Current Step: <%= currentStep %></h1>
+		<% for(var i = 1; i <= totalSteps; i++) {%>
+			<form method="post" action="/step/<%=i%>">
+				<button type="submit"<% if (i == currentStep) { %> disabled<% } %>>
+					Step <%=i%>
+				</button>
+			</form>
+		<% } %>
 	</body>
 </html>
