--- a/server/templates/index.ejs
+++ b/server/templates/index.ejs
@@ -6,10 +6,10 @@
 		<title>Current Step</title>
 	</head>
 	<body>
-		<h1>Current Step: <%= currentStep %></h1>
+		<h1>Current Step: <%= availableSteps %></h1>
 		<% for(var i = 1; i <= totalSteps; i++) {%>
 			<form method="post" action="/step/<%=i%>">
-				<button type="submit"<% if (i == currentStep) { %> disabled<% } %>>
+				<button type="submit"<% if (i == availableSteps) { %> disabled<% } %>>
 					Step <%=i%>
 				</button>
 			</form>
