Fixing absolute images and webpack config for device

--- a/app/css/start.css
+++ b/app/css/start.css
@@ -1,5 +1,5 @@
 .start {
-	background: url('/images/start.png') no-repeat center center fixed;
+	background: url('images/start.png') no-repeat center center fixed;
 	background-size: cover;
 	bottom: 0;
 	left: 0;
