Stripped a template out from the app
Obviously, DO NOT MERGE, as this is just for discussion, etc

Creation of the actual template will involve splitting this branch into
a new repo.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,15 +6,12 @@ body {
 	-webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
 	-webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
 	-webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-	background: #000000;
-	font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-	font-size: 12px;
+	background: #ffffff;
+	font-family: 'HelveticaNeue-Light', 'HelveticaNeue', 'Roboto', Helvetica, Arial, sans-serif;
+	font-size: 100%;
 	height: 100%;
 	margin: 0px;
 	padding: 0px;
 	width: 100%;
 }
 
-#app {
-	margin-top: 80px;
-}
