Tweak to use per-platform server URL for HMRs
Android emulator needs to use 10.0.2.2 instead of localhost

This also reinstates the CSP by having the HMR server listen on 0.0.0.0
(this way, when android tries to reach it at 10.0.2.2 instead of
localhost, it will work).

Deleted constants.js and the other errant server css as the server is
not needed for the template.

--- a/src/css/hello.css
+++ b/src/css/hello.css
@@ -17,7 +17,7 @@
 	-webkit-appearance: none;
 	border-radius: 2px;
 	background: #efefef;
-	color: #222222;
+	color: #666666;
 	padding: 10px;
 	width: 300px;
 	text-align: center;
@@ -26,7 +26,8 @@
 }
 
 .hello .button-say-hello.Tappable-active {
-	background: #dddddd;
+	background: #e6e6e6;
+	color: #333333;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 	-webkit-transform: translate(50%, 1px);
 	transform: translate(50%, 1px);
